# RedDeadConvolver

./: README.md  pyproject.toml
src/reddeadconvolver/: __init__.py  cli.py  convolve.py  dashboard.py  webapp.py
src/reddeadconvolver/web/templates/: index.html
tests/: test_convolve.py
